<resources>
    <string name="app_name">Bitcoin</string>
    <string name="currency_BTC_USD_label">BTC USD</string>
    <string name="currency_BTC_EUR_label">BTC EUR</string>
    <string name="currency_USD_label">USD</string>
    <string name="currency_BTC_label">USD</string>


    <string name="btc_transaction_header_purchase">Покупка</string>
    <string name="btc_transaction_cost_header_purchase_usd_to_btc">Вы получите</string>
    <string name="btc_transaction_cost_header_purchase_btc_to_usd">Вы потратите</string>
    <string name="btc_action_button_purchase">Купить</string>

    <string name="btc_transaction_header_sale">Продажа</string>
    <string name="btc_transaction_cost_header_sale_btc_to_usd">Вы получите</string>
    <string name="btc_transaction_cost_header_sale_usd_to_btc">Вы продадите</string>
    <string name="btc_action_button_sale">Продать</string>


    <string name="title_activity_menu">Bitcoin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_dashboard">home</string>
    <string name="navigation_btc_purchase">buy bitcoin</string>
    <string name="navigation_btc_sale">sell bitcoin</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="login_btc_label">BITCOIN</string>


    <string name="login_hint_state_get_code">your phone number...</string>
    <string name="login_hint_state_get_token">code from SMS...</string>
    <string name="login_action_button_state_get_code">get code</string>
    <string name="login_action_button_state_get_token">send code</string>

    <!-- Card info fragment -->
    <string name="card_info_amount_label">Amount</string>
    <string name="card_info_cost_label">Cost</string>
    <string name="card_info_hint_pan">4242 4242 4242 4242</string>
    <string name="card_info_hint_cvv">123</string>
    <string name="card_info_hint_month_year_exp">MM/YY</string>
    <string name="card_info_save_card">save card</string>
    <string name="card_info_hint_cardholder_name">cardholder name</string>
    <string name="card_info_action_button">done</string>
    <string name="card_info_cancel_button">cancel</string>
    <string name="card_info_add_card_button">add new card</string>



    <string name="wallet_address_dialog_title">Адрес биткойн кошелька</string>
    <string name="wallet_address_dialog_anno">Пожалуйста, укажите адрес вашего bitcoin кошелька (данная информация сохранится только на вашем устройстве)</string>


    <string name="dialog_button_positive">OK</string>
    <string name="dialog_button_later">later</string>

</resources>
