<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/btc_transaction_info_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/frameBackground"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.0">

        <TextView
            android:id="@+id/btc_transaction_info_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:text="default_transaction_type"
            android:textColor="@color/frameBackground"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btc_transaction_info_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btc_transaction_info_header"
            android:text="@string/card_info_amount_label"
            android:padding="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/btc_transaction_info_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="some BTC"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@+id/btc_transaction_info_amount_label"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btc_transaction_info_header" />

        <TextView
            android:id="@+id/btc_transaction_info_cost_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btc_transaction_info_amount_label"
            android:text="@string/card_info_cost_label"
            android:padding="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/btc_transaction_info_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="some USD"
            android:padding="5dp"
            app:layout_constraintLeft_toRightOf="@+id/btc_transaction_info_amount_label"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btc_transaction_info_amount_label" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cardinfo_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btc_transaction_info_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <EditText
            android:id="@+id/card_info_pan_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:textSize="20dp"
            android:padding="8dp"
            android:inputType="number"
            android:textAlignment="center"
            android:hint="@string/card_info_hint_pan"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/card_info_cvv_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:textSize="20dp"
            android:padding="8dp"
            android:inputType="numberPassword"
            android:textAlignment="center"
            android:hint="@string/card_info_hint_cvv"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/card_info_month_year_exp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/card_info_month_year_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number"
            android:textSize="20dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:hint="@string/card_info_hint_month_year_exp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@+id/card_info_cardholder" />

        <EditText
            android:id="@+id/card_info_cardholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:inputType="textPersonName"
            android:hint="@string/card_info_hint_cardholder_name"
            android:textSize="20dp"
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_marginStart="0dp"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/card_info_pan_edit_text" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_info_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/frameBackground"
        android:background="@color/colorDanger"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/card_info_action_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/card_info_action_button"
        android:background="@color/colorPrimary"
        android:textColor="@color/frameBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/card_info_ips_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/card_default"
        app:layout_constraintLeft_toLeftOf="@+id/cardinfo_layout"
        android:layout_marginLeft="32dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/cardinfo_layout"
        android:layout_marginTop="8dp" />


</android.support.constraint.ConstraintLayout>